# recipe-mcp

./: .gitignore  README.md  constants.json  foodmcp.py  main.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt
.github/workflows/: api-tests.yml  publish.yml
recipe_mcp/: __init__.py  foodmcp.py
tests/: all-stores.api.spec.js  city-gross.api.spec.js  ica.api.spec.js  willys.api.spec.js
